--- a/css/main.css
+++ b/css/main.css
@@ -594,6 +594,13 @@ p {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .advantages__list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .advantages__object {
     margin-top: 30px;
