--- a/sass/components/web-studio-content/_advantages.scss
+++ b/sass/components/web-studio-content/_advantages.scss
@@ -53,9 +53,9 @@
     flex-basis: calc((100% / 2 - 30px));
   }
 
-  @media screen and (min-width: 1200px) {
-    flex-basis: calc((100% / 1 - 30px));
-  }
+  // @media screen and (min-width: 1200px) {
+  //   flex-basis: calc((100% / 1 - 30px));
+  // }
 }
 
 .advantages__subtitle {
