--- a/css/main.css
+++ b/css/main.css
@@ -609,10 +609,15 @@ p {
   }
 }
 
+.advantages__object {
+  margin-bottom: 30px;
+}
+
 @media screen and (min-width: 768px) {
   .advantages__object {
     margin-top: 30px;
     margin-left: 30px;
+    margin-bottom: 0px;
     -ms-flex-preferred-size: calc((100% / 2 - 30px));
         flex-basis: calc((100% / 2 - 30px));
   }
