--- a/sass/components/web-studio-content/_advantages.scss
+++ b/sass/components/web-studio-content/_advantages.scss
@@ -47,9 +47,12 @@
 // }
 
 .advantages__object {
+  margin-bottom: 30px;
+
   @media screen and (min-width: 768px) {
     margin-top: 30px;
     margin-left: 30px;
+    margin-bottom: 0px;
     flex-basis: calc((100% / 2 - 30px));
   }
 
