--- a/css/main.css
+++ b/css/main.css
@@ -1115,6 +1115,18 @@ p {
   background-color: var(--accent-color);
 }
 
+@media screen and (min-width: 768px) {
+  .subscription {
+    margin-top: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription {
+    margin-top: 0px;
+  }
+}
+
 .subscription__text {
   font-size: 14px;
   font-weight: 700;
