--- a/sass/components/footer-page/_subscription.scss
+++ b/sass/components/footer-page/_subscription.scss
@@ -1,3 +1,13 @@
+.subscription {
+  @media screen and (min-width: 768px) {
+    margin-top: 60px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 0px;
+  }
+}
+
 .subscription__text {
   font-size: 14px;
   font-weight: 700;
