--- a/sass/components/web-portfolio-content/_cards-portfolio.scss
+++ b/sass/components/web-portfolio-content/_cards-portfolio.scss
@@ -18,13 +18,12 @@
   height: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover,
-    &:focus {
+  &:hover,
+  &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
+      1px 4px 6px rgba(0, 0, 0, 0.16);
     cursor: pointer;
-}
-
+  }
 }
 
 .cards-content__box {
@@ -53,6 +52,9 @@
   overflow: hidden;
 }
 
+.cards-thumb {
+}
+
 .cards-content__backdrop {
   position: absolute;
   top: 0;
@@ -64,11 +66,10 @@
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    .cards__link:hover &,
-    .cards__link:focus & {
+  .cards__link:hover &,
+  .cards__link:focus & {
     transform: translateY(0%);
-}
-
+  }
 }
 
 .cards-content__text {
