--- a/css/main.css
+++ b/css/main.css
@@ -323,6 +323,8 @@ p {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: start;
+    font-size: 26px;
+    line-height: 1.19;
   }
 }
 
