--- a/sass/components/web-studio-content/_hero.scss
+++ b/sass/components/web-studio-content/_hero.scss
@@ -24,9 +24,10 @@
   height: 400px;
   margin-left: auto;
   margin-right: auto;
-  background-repeat: no-repeat;
-  background-position: center;
+  // background-repeat: no-repeat;
+  // background-position: center;
   background-size: cover;
+
   background-image: linear-gradient(
       to right,
       var(--background-color-hero),
@@ -35,7 +36,6 @@
     url(../images/hero/hero_480.jpg);
 
   @media (min-device-pixel-ratio: 2),
-    (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     background-image: linear-gradient(
@@ -45,29 +45,28 @@
       ),
       url(../images/hero/hero_960@2x.jpg);
   }
-  // ---------------------------------deleted
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
-    height: 400px;
-    background-image: linear-gradient(
-        to right,
-        var(--background-color-hero),
-        var(--background-color-hero)
-      ),
-      url(../images/hero/hero_960@2x.jpg);
-  }
-  // _______________________________________________________
 
-  @media screen and (min-width: 1200px) {
-    max-width: 1600px;
-    height: 600px;
-    background-image: linear-gradient(
-        to right,
-        var(--background-color-hero),
-        var(--background-color-hero)
-      ),
-      url(../images/hero/hero_3200@2x.jpg);
-  }
+  // @media screen and (min-width: 768px) {
+  //   max-width: 768px;
+  //   height: 400px;
+  //   background-image: linear-gradient(
+  //       to right,
+  //       var(--background-color-hero),
+  //       var(--background-color-hero)
+  //     ),
+  //     url(../images/hero/hero_960@2x.jpg);
+  // }
+
+  // @media screen and (min-width: 1200px) {
+  //   max-width: 1600px;
+  //   height: 600px;
+  //   background-image: linear-gradient(
+  //       to right,
+  //       var(--background-color-hero),
+  //       var(--background-color-hero)
+  //     ),
+  //     url(../images/hero/hero_3200@2x.jpg);
+  // }
 }
 
 .hero__btn {
