--- a/css/main.css
+++ b/css/main.css
@@ -527,6 +527,37 @@ p {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .hero__img {
+    max-width: 768px;
+    background-image: -webkit-gradient(linear, left top, right top, from(var(--background-color-hero)), to(var(--background-color-hero))), url(../images/hero/hero_768.jpg);
+    background-image: linear-gradient(to right, var(--background-color-hero), var(--background-color-hero)), url(../images/hero/hero_768.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero__img {
+    background-image: -webkit-gradient(linear, left top, right top, from(var(--background-color-hero)), to(var(--background-color-hero))), url(../images/hero/hero_1536@2x.jpg);
+    background-image: linear-gradient(to right, var(--background-color-hero), var(--background-color-hero)), url(../images/hero/hero_1536@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__img {
+    max-width: 1600px;
+    height: 600px;
+    background-image: -webkit-gradient(linear, left top, right top, from(var(--background-color-hero)), to(var(--background-color-hero))), url(../images/hero/hero_1600.jpg);
+    background-image: linear-gradient(to right, var(--background-color-hero), var(--background-color-hero)), url(../images/hero/hero_1600.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero__img {
+    background-image: -webkit-gradient(linear, left top, right top, from(var(--background-color-hero)), to(var(--background-color-hero))), url(../images/hero/hero_3200@2x.jpg);
+    background-image: linear-gradient(to right, var(--background-color-hero), var(--background-color-hero)), url(../images/hero/hero_3200@2x.jpg);
+  }
+}
+
 .hero__btn {
   font-family: var(--primary-font-family);
   font-weight: 700;
