--- a/sass/components/web-studio-content/_hero.scss
+++ b/sass/components/web-studio-content/_hero.scss
@@ -43,6 +43,49 @@
       ),
       url(../images/hero/hero_960@2x.jpg);
   }
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    background-image: linear-gradient(
+        to right,
+        var(--background-color-hero),
+        var(--background-color-hero)
+      ),
+      url(../images/hero/hero_768.jpg);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          var(--background-color-hero),
+          var(--background-color-hero)
+        ),
+        url(../images/hero/hero_1536@2x.jpg);
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+    height: 600px;
+    background-image: linear-gradient(
+        to right,
+        var(--background-color-hero),
+        var(--background-color-hero)
+      ),
+      url(../images/hero/hero_1600.jpg);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          var(--background-color-hero),
+          var(--background-color-hero)
+        ),
+        url(../images/hero/hero_3200@2x.jpg);
+    }
+  }
 }
 
 .hero__btn {
