--- a/sass/components/web-studio-content/_our-work.scss
+++ b/sass/components/web-studio-content/_our-work.scss
@@ -23,6 +23,14 @@
   justify-content: space-between;
 }
 
+// .list-work__item {
+//   margin-right: 30px;
+// }
+
+// .list-work__item:last-child {
+//   margin-right: 30px;
+// }
+
 .list-work__thumb {
   position: relative;
 }
