--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -63,4 +63,15 @@
   display: -ms-flexbox;
   display: flex;
 }
+
+.mobile-social-network__item:not(:last-child)::after {
+  content: '';
+  width: 0px;
+  height: 22px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  margin-right: 10px;
+  margin-left: 10px;
+}
 /*# sourceMappingURL=mobile-menu.css.map */
