--- a/sass/components/mobile-menu/mobile-menu.scss
+++ b/sass/components/mobile-menu/mobile-menu.scss
@@ -59,15 +59,18 @@
   }
 }
 
-// .mobile-contact-link__link--color {
-//   font-style: normal;
-//   font-weight: 500;
-//   font-size: 24px;
-//   line-height: 1.17;
-//   letter-spacing: 0.02em;
-//   color: var(--secondary-color-text);
-// }
-
 .mobile-social-network {
   display: flex;
+}
+
+.mobile-social-network__item:not(:last-child) {
+  &::after {
+    content: '';
+    width: 0px;
+    height: 22px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    transform: rotate(90deg);
+    margin-right: 10px;
+    margin-left: 10px;
+  }
 }
