--- a/sass/components/mobile-menu/mobile-menu.scss
+++ b/sass/components/mobile-menu/mobile-menu.scss
@@ -6,7 +6,7 @@
     background-color: var(--tertiary-color-text);
     width: 100vw;
     height: 100vh;
-    overflow-y: scroll;
+    overflow: hidden;
     padding: 48px 40px;
   }
 }
