--- a/css/main.css
+++ b/css/main.css
@@ -1694,7 +1694,7 @@ p {
     background-color: var(--tertiary-color-text);
     width: 100vw;
     height: 100vh;
-    overflow-y: scroll;
+    overflow: hidden;
     padding: 48px 40px;
   }
 }
