--- a/css/main.css
+++ b/css/main.css
@@ -1696,7 +1696,14 @@ p {
     height: 100vh;
     overflow: hidden;
     padding: 48px 40px;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
   }
+}
+
+.mobile-menu.is-open {
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
 }
 
 .modal__btn--mobile {
