--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -8,7 +8,14 @@
     height: 100vh;
     overflow: hidden;
     padding: 48px 40px;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
   }
+}
+
+.mobile-menu.is-open {
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
 }
 
 .modal__btn--mobile {
