--- a/sass/components/mobile-menu/mobile-menu.scss
+++ b/sass/components/mobile-menu/mobile-menu.scss
@@ -8,7 +8,12 @@
     height: 100vh;
     overflow: hidden;
     padding: 48px 40px;
+    transform: translateX(100%);
   }
+}
+
+.mobile-menu.is-open {
+  transform: translateX(0%);
 }
 
 .modal__btn--mobile {
