--- a/css/main.css
+++ b/css/main.css
@@ -1694,7 +1694,7 @@ p {
     background-color: var(--tertiary-color-text);
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    overflow-y: scroll;
     padding: 48px 40px;
     -webkit-transform: translateX(100%);
             transform: translateX(100%);
