--- a/css/main.css
+++ b/css/main.css
@@ -1457,7 +1457,7 @@ p {
   position: absolute;
   top: 50%;
   left: 50%;
-  max-width: 528px;
+  max-width: 450px;
   max-height: 100vh;
   width: 100%;
   padding: 40px;
@@ -1469,6 +1469,12 @@ p {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    max-width: 528px;
+  }
 }
 
 .backdrop.is-hidden .modal {
@@ -1514,9 +1520,15 @@ p {
 .form-signup__text {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   margin-bottom: 12px;
+}
+
+@media screen and (min-width: 768px) {
+  .form-signup__text {
+    line-height: 1.15;
+  }
 }
 
 .input-form__label {
