--- a/sass/components/modal/_form-signup.scss
+++ b/sass/components/modal/_form-signup.scss
@@ -6,7 +6,11 @@
 .form-signup__text {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   margin-bottom: 12px;
+
+  @media screen and (min-width: 768px) {
+    line-height: 1.15;
+  }
 }
