--- a/sass/components/modal/_modal.scss
+++ b/sass/components/modal/_modal.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  max-width: 528px;
+  max-width: 450px;
   max-height: 100vh;
   width: 100%;
   padding: 40px;
@@ -11,6 +11,10 @@
 
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 768px) {
+    max-width: 528px;
+  }
 }
 
 .backdrop.is-hidden .modal {
@@ -35,6 +39,5 @@
   &:focus {
     fill: var(--accent-color);
     cursor: pointer;
-}
-
+  }
 }
