--- a/css/main.css
+++ b/css/main.css
@@ -628,11 +628,13 @@ p {
 }
 
 @media screen and (min-width: 768px) {
-  margin-top: 30px;
-  margin-left: 30px;
-  margin-bottom: 0px;
-  -ms-flex-preferred-size: calc((100% / 2 - 30px));
-      flex-basis: calc((100% / 2 - 30px));
+  .advantages__object {
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-bottom: 0px;
+    -ms-flex-preferred-size: calc((100% / 2 - 30px));
+        flex-basis: calc((100% / 2 - 30px));
+  }
 }
 
 .advantages__subtitle {
