--- a/css/main.css
+++ b/css/main.css
@@ -287,7 +287,6 @@ p {
   background-color: transparent;
   padding: 0px;
   border: none;
-  margin: 10px 0px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -311,6 +310,7 @@ p {
   font-weight: 700;
   font-size: 24px;
   line-height: 1.16;
+  padding: 16px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
