--- a/sass/components/header-page/_logo.scss
+++ b/sass/components/header-page/_logo.scss
@@ -3,6 +3,7 @@
   font-weight: 700;
   font-size: 24px;
   line-height: 1.16;
+  padding: 16px 0px;
   display: flex;
   justify-content: center;
   color: var(--accent-color);
