--- a/css/main.css
+++ b/css/main.css
@@ -444,19 +444,25 @@ p {
 
 .contact-link__item:first-child {
   margin-bottom: 10px;
+  padding-top: 20px;
 }
 
 @media screen and (min-width: 1200px) {
   .contact-link__item:first-child {
     margin-bottom: 0px;
     margin-right: 30px;
+    padding: 0px;
   }
+}
+
+.contact-link__item:last-child {
+  padding-bottom: 20px;
 }
 
 .contact-link__link {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.16;
   color: var(--secondary-color-text);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -474,6 +480,8 @@ p {
 
 @media screen and (min-width: 1200px) {
   .contact-link__link {
+    font-size: 14px;
+    line-height: 1.14;
     padding-top: 32px;
     padding-bottom: 32px;
   }
