--- a/sass/components/header-page/_contact-link.scss
+++ b/sass/components/header-page/_contact-link.scss
@@ -10,17 +10,23 @@
 
 .contact-link__item:first-child {
   margin-bottom: 10px;
+  padding-top: 20px;
 
   @media screen and (min-width: 1200px) {
     margin-bottom: 0px;
     margin-right: 30px;
+    padding: 0px;
   }
+}
+
+.contact-link__item:last-child {
+  padding-bottom: 20px;
 }
 
 .contact-link__link {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.16;
   color: var(--secondary-color-text);
   display: flex;
   align-items: center;
@@ -32,6 +38,8 @@
   }
 
   @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.14;
     padding-top: 32px;
     padding-bottom: 32px;
   }
